--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -8,6 +8,7 @@ body {
   justify-content: space-between;
   align-items: flex-end;
   margin-bottom: 20px;
+  margin-top: 15px;
 }
 .title {
   font-family: serif;
