--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,14 +38,16 @@
   </head>
   <body>
 
-    <div class="navbar navbar-default navbar-static-top navbar-fixed-top">
+    <div class="navbar <%= 'navbar-inverse' if Rails.env.development? %> navbar-default navbar-static-top navbar-fixed-top">
       <div class="container">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Lab backend</a>
+        <a class="navbar-brand" href="/">
+          Lab backend<%= ' DEV' if Rails.env.development? %>
+        </a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <li><%= link_to "Patients", "/patients"  %></li>
