add some preloading of associations

--- a/app/views/dna_extractions/select_quantification_files.html.erb
+++ b/app/views/dna_extractions/select_quantification_files.html.erb
@@ -52,7 +52,7 @@
   <div class="col-sm-12">
     <%= form_tag('/dna_extractions/upload_gel_picture', action: :upload, multipart: true) do |f| %>
       <div class="field">
-        <label class="control-label">Associated DNA extractions</label>
+        <label class="control-label">DNA extractions in this electrophoresis</label>
         <div class="selectable-dnas">
 
           <div class="group with-scroll">
