--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -11,6 +11,7 @@
   </div>
 </div>
   
+<%= render 'shared/search_form' %>
 
 <table class='table table-striped table-condensed'>
   <thead>
@@ -46,15 +47,16 @@
       <tr class="hidden-row">
         <td colspan="8">
           <div class="accordion-body collapse" id="detail-<%= patient.id %>">
+            <%= render patient %>
+
             <% patient.samples.decorate.each do |sample| %>
 
-              <%= render partial: 'samples/sample',
-                  locals: { sample: sample, show_full_data: true } %>
+              <%= render sample %>
 
             <% end %>
 
             <% if patient.samples.count.zero? %>
-              <p>No samples associated with this patient.</p>
+              <div class="card">No samples associated with this patient.</div>
             <% end %>
           </div><!-- .accordion-body -->
         </td>
