--- a/app/views/libraries/index.html.erb
+++ b/app/views/libraries/index.html.erb
@@ -15,7 +15,7 @@
     <tr>
       <th>ID</th>
       <th>Project</th>
-      <th>N DNA extractions</th>
+      <th>DNA extractions</th>
       <th>Used in these<br>sequencings</th>
       <th>Laboratory</th>
     </tr>
