--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -21,7 +21,7 @@
     <%= f.text_field :acronym %>
   </div>
   <div class="field">
-    <%= f.date_select :birthdate, {start_year: 1915, end_year: Date.today.year}, class: 'form-control' %>
+    <%= f.date_select :birthdate, {start_year: 1915, end_year: Date.today.year, include_blank: true, default: nil}, class: 'form-control' %>
   </div>
   <div class="actions">
     <%= f.submit %>
