--- a/app/views/dna_extractions/select_quantification_files.html.erb
+++ b/app/views/dna_extractions/select_quantification_files.html.erb
@@ -58,8 +58,8 @@
           <div class="group with-scroll">
             <h2 class="title">DNAs with pic</h2>
             <% @dna_extractions[:have_gel_picture].each do |dna_extraction| %>
-              <label for="associated_dnas_<%= dna_extraction.id %>">
-                <%= check_box_tag('associated_dnas[]', dna_extraction.id) %>
+              <label for="gel_picture_associated_dnas_<%= dna_extraction.id %>">
+                <%= check_box_tag("gel_picture[associated_dnas][#{dna_extraction.id}]", dna_extraction.id) %>
                 <%= dna_extraction.description %>
               </label>
               <br>
@@ -72,8 +72,8 @@
             <h2 class="title">DNAs without pic</h2>
             <div class="checkbox">
             <% @dna_extractions[:dont_have_gel_picture].each do |dna_extraction| %>
-              <label for="associated_dnas_<%= dna_extraction.id %>">
-                <%= check_box_tag("associated_dnas[#{dna_extraction.id}]", dna_extraction.id) %>
+              <label for="gel_picture_associated_dnas_<%= dna_extraction.id %>">
+                <%= check_box_tag("gel_picture[associated_dnas][#{dna_extraction.id}]", dna_extraction.id) %>
                 <%= dna_extraction.description %>
               </label>
               <br>
@@ -83,20 +83,20 @@
 
         </div><!-- .selectable-dnas -->
       </div>
-    <% end %>
 
-    <div class="field">
-      <label class="control-label">Gel picture (.jpg, .jpeg, .png)</label>
-      <%= file_field_tag :gel_picture %>
-    </div>
+      <div class="field">
+        <label class="control-label">Gel picture (.jpg, .jpeg, .png)</label>
+        <%= file_field_tag 'gel_picture[image]' %>
+      </div>
 
-    <button type="submit" class="btn btn-primary">
-      Submit the chosen files
-    </button>
+      <button type="submit" class="btn btn-primary">
+        Submit the chosen files
+      </button>
 
-    <button type="reset" class="btn btn-default">
-      Reset the chosen files
-    </button>
+      <button type="reset" class="btn btn-default">
+        Reset the chosen files
+      </button>
+    <% end %><!-- form -->
 
-  </div>
-</div>
+  </div><!-- .col-sm-12 -->
+</div><!-- .row -->
