--- a/app/views/dna_extractions/select_quantification_files.html.erb
+++ b/app/views/dna_extractions/select_quantification_files.html.erb
@@ -18,14 +18,14 @@
         <label class="control-label" for="nanodrop_file">
           Load Nanodrop quantification file (.tsv)
         </label>
-        <%= file_field_tag :nanodrop_file %>
+        <%= file_field_tag :nanodrop_file, accept: 'text/tab-separated-values' %>
       </div>
 
       <div class="field">
         <label class="control-label" for="qubit_file">
           Load Qubit quantification file (.csv)
         </label>
-        <%= file_field_tag :qubit_file %>
+        <%= file_field_tag :qubit_file, accept: 'text/csv' %>
       </div>
 
       <button type="submit" class="btn btn-primary">
@@ -57,14 +57,14 @@
 
           <div class="group with-scroll">
             <h2 class="title">DNAs with pic</h2>
-            <% @dna_extractions[:have_gel_picture].each do |dna_extraction| %>
-              <label for="gel_picture_associated_dnas_<%= dna_extraction.id %>">
-                <%= check_box_tag("gel_picture[associated_dnas][#{dna_extraction.id}]", dna_extraction.id) %>
-                <%= dna_extraction.description %>
-              </label>
-              <br>
-            <% end %>
             <div class="checkbox">
+              <% @dna_extractions[:have_gel_picture].each do |dna_extraction| %>
+                <label for="gel_picture_associated_dnas_<%= dna_extraction.id %>">
+                  <%= check_box_tag("gel_picture[associated_dnas][#{dna_extraction.id}]", dna_extraction.id) %>
+                  <%= dna_extraction.description %>
+                </label>
+                <br>
+              <% end %>
             </div>
           </div>
 
