--- a/app/views/nanodrop_quantifications/edit.html.erb
+++ b/app/views/nanodrop_quantifications/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing Nanodrop Quantification</h1>
+<h1>Editing Nanodrop Quantification from <%= @nanodrop_quantification.source %></h1>
 
 <%= render 'form' %>
 
