--- a/app/views/qubit_quantifications/edit.html.erb
+++ b/app/views/qubit_quantifications/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing Qubit Quantification</h1>
+<h1>Editing Qubit Quantification from <%= @qubit_quantification.source %></h1>
 
 <%= render 'form' %>
 
