--- a/app/views/dna_extractions/edit.html.erb
+++ b/app/views/dna_extractions/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Dna Extraction</h1>
+<h1 class='title'>Editing Dna Extraction</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @dna_extraction %> |
-<%= link_to 'Back', dna_extraction_path %>
+<%= link_to 'Destroy this DNA Extraction', @dna_extraction, class: 'btn btn-danger', method: :delete, data: { confirm: "Destroy DNA Extraction ##{@dna_extraction.id} from sample ##{@dna_extraction.sample.id}"} %>
