--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -26,6 +26,7 @@ body {
   }
   .right {
     margin-left: 35px;
+    text-align: right;
   }
 
   .flex-grow {
@@ -37,3 +38,6 @@ body {
   width: 75px;
 }
 
+.modal-content {
+  text-align: center;
+}
