--- a/app/views/dna_extractions/_dna_extraction.html.erb
+++ b/app/views/dna_extractions/_dna_extraction.html.erb
@@ -1,7 +1,33 @@
 <div class="card card-dna">
-  <div class="card__title">
-    <%= fa_icon 'tint' %>
-    <%= link_to dna_extraction.description, edit_dna_extraction_path(dna_extraction.id) %>
+  <div class="card__title horizontal-flex">
+    <div class="left flex-grow">
+      <%= fa_icon 'tint' %>
+      <%= link_to dna_extraction.description, edit_dna_extraction_path(dna_extraction.id) %>
+    </div>
+
+    <div class="right flex-grow">
+      <% unless dna_extraction.gel_picture.file.nil? %>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#gel-modal-<%= dna_extraction.id %>">
+          <%= fa_icon 'barcode' %>
+          See this DNA in the gel
+        </button>
+      <% end %>
+    </div>
+  </div>
+
+  <!-- Large modal with the Gel Picture associated to this DNA Extraction -->
+  <div id="gel-modal-<%= dna_extraction.id %>" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">Gel Electrophoresis run with DNA #<%= dna_extraction.id %></h4>
+        </div>
+        <div class="modal-body">
+          <%= image_tag(dna_extraction.gel_picture.url) %>
+        </div>
+      </div>
+    </div>
   </div>
 
   <% unless dna_extraction.nanodrop_quantifications.count.zero? %>
