add notebooks upload with tests passing

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,3 +1,6 @@
+::-moz-selection { background: gold; }
+::selection { background: gold; }
+
 .project-tag {
   font-family: monospace;
   /* font-weight: bold; */
