--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,7 @@
             <li><%= link_to "DNA Extraction", "/dna_extractions/select_quantification_files"  %></li>
             <li><%= link_to "Libraries", "/libraries"  %></li>
             <li><%= link_to "Sequencings", "/sequencings"  %></li>
+            <li><%= link_to "Notebooks", "/notebooks"  %></li>
           </ul>
         </div>
       </div>
