--- a/app/views/nanodrop_quantifications/_nanodrop_quantification.html.erb
+++ b/app/views/nanodrop_quantifications/_nanodrop_quantification.html.erb
@@ -5,24 +5,41 @@
       <span class="grey small">edit</span>
     <% end %>
   </th>
-  <th>Concentration</th>
-  <th>260/280</th>
-  <th>260/230</th>
-  <th>Abs. 280</th>
-  <th>Abs. 260</th>
-  <th>Factor</th>
-  <th>Type</th>
-  <th>Date</th>
-</tr>
-<tr>
-  <th class="quanti-index">Nanodrop</td>
-  <td><%= nanodrop_quantification.concentration %></td>
-  <%= nanodrop_quantification.ratio_260_280_td %>
-  <td><%= nanodrop_quantification.ratio_260_230 %></td>
-  <td><%= nanodrop_quantification.absorbance_280 %></td>
-  <td><%= nanodrop_quantification.absorbance_260 %></td>
-  <td><%= nanodrop_quantification.factor %></td>
-  <td><%= nanodrop_quantification.sample_type %></td>
-  <td><%= nanodrop_quantification.created_at %></td>
+  <tr>
+    <td>Nanodrop</td>
+    <th>Technology</th>
+  </tr>
+  <tr>
+    <td><%= nanodrop_quantification.concentration %></td>
+    <th>Concentration</th>
+  </tr>
+  <tr>
+    <%= nanodrop_quantification.ratio_260_280_td %>
+    <th>260/280</th>
+  </tr>
+  <tr>
+    <td><%= nanodrop_quantification.ratio_260_230 %></td>
+    <th>260/230</th>
+  </tr>
+  <tr>
+    <td><%= nanodrop_quantification.absorbance_280 %></td>
+    <th>Abs. 280</th>
+  </tr>
+  <tr>
+    <td><%= nanodrop_quantification.absorbance_260 %></td>
+    <th>Abs. 260</th>
+  </tr>
+  <tr>
+    <td><%= nanodrop_quantification.factor %></td>
+    <th>Factor</th>
+  </tr>
+  <tr>
+    <td><%= nanodrop_quantification.sample_type %></td>
+    <th>Type</th>
+  </tr>
+  <tr>
+    <td><%= nanodrop_quantification.created_at %></td>
+    <th>Date</th>
+  </tr>
 </tr>
 
