--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -30,3 +30,7 @@
 //
 // Example:
 // @link-color: #ff0000;
+
+@font-family-sans-serif: 'Roboto', sans-serif;
+@font-family-serif: 'Playfair Display', serif;
+@font-size-base: 13px;
