--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -60,3 +60,10 @@ a.btn {
   font-size: 0.85em;
   transform: rotate(90deg);
 }
+
+.modal-body {
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
