--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,6 +1,7 @@
 body {
   margin-top: 60px;
   margin-bottom: 40px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 // Headers + action buttons, usually on top of the page
@@ -11,8 +12,17 @@ body {
   margin-bottom: 20px;
   margin-top: 15px;
 }
-.title {
-  font-family: serif;
+
+h1 {
+  font-family: 'Playfair Display', serif;
+}
+
+hr {
+  border-top: 1px solid silver;
+}
+
+.logo {
+  width: 145px;
 }
 
 .horizontal-flex {
@@ -21,16 +31,27 @@ body {
   align-content: space-between;
 
   .left {
-    margin-bottom: 25px;
     max-width: 400px;
   }
+  
   .right {
-    margin-left: 35px;
     text-align: right;
   }
 
   .flex-grow {
     flex-grow: 1;
+    margin: 10px;
+  }
+}
+
+img.preview {
+  max-width: 350px;
+  padding: 5px;
+  border: 1px solid silver;
+  border-radius: 2px;
+
+  &:hover {
+    cursor: pointer;
   }
 }
 
