--- a/app/views/dna_extractions/_dna_extraction.html.erb
+++ b/app/views/dna_extractions/_dna_extraction.html.erb
@@ -4,15 +4,6 @@
       <%= fa_icon 'tint' %>
       <%= link_to dna_extraction.description, edit_dna_extraction_path(dna_extraction.id) %>
     </div>
-
-    <div class="right flex-grow">
-      <% unless dna_extraction.gel_picture.file.nil? %>
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#gel-modal-<%= dna_extraction.id %>">
-          <%= fa_icon 'barcode' %>
-          See this DNA in the gel
-        </button>
-      <% end %>
-    </div>
   </div>
 
   <!-- Large modal with the Gel Picture associated to this DNA Extraction -->
@@ -30,21 +21,41 @@
     </div>
   </div>
 
-  <% unless dna_extraction.nanodrop_quantifications.count.zero? %>
-    <table class="table table-bordered table-condensed table-striped quantification">
-      <% dna_extraction.nanodrop_quantifications.decorate.each do |nanodrop_quantification| %>
-        <%= render nanodrop_quantification %>
+  <div class="horizontal-flex">
+    <div class="flex-grow">
+      <!-- Quantification tables -->
+      <% unless dna_extraction.nanodrop_quantifications.count.zero? %>
+        <table class="table table-bordered table-condensed table-striped quantification">
+          <% dna_extraction.nanodrop_quantifications.decorate.each do |nanodrop_quantification| %>
+            <%= render nanodrop_quantification %>
+          <% end %>
+        </table>
       <% end %>
-    </table>
-  <% end %>
+    </div>
 
-  <% unless dna_extraction.qubit_quantifications.count.zero? %>
-    <table class="table table-bordered table-condensed table-striped quantification">
-      <% dna_extraction.qubit_quantifications.decorate.each do |qubit_quantification| %>
-        <%= render qubit_quantification %>
+    <div class="flex-grow">
+      <% unless dna_extraction.qubit_quantifications.count.zero? %>
+        <table class="table table-bordered table-condensed table-striped quantification">
+          <% dna_extraction.qubit_quantifications.decorate.each do |qubit_quantification| %>
+            <%= render qubit_quantification %>
+          <% end %>
+        </table>
       <% end %>
-    </table>
-  <% end %>
+    </div>
+
+
+    <% if dna_extraction.gel_picture.file %>
+      <div class="flex-grow">
+        <a data-toggle="modal" data-target="#gel-modal-<%= dna_extraction.id %>">
+          <div class="flex-grow">
+            <%= image_tag dna_extraction.gel_picture.url, class: 'preview' %>
+          </div>
+        </a>
+      </div>
+    <% end %>
+
+  </div>
+  
 
 </div><!-- .dna-extraction-details -->
 
