read image metadata comment and display iit

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -66,4 +66,12 @@ a.btn {
     max-width: 100%;
     max-height: 100%;
   }
+
+  .img-comment {
+    position: absolute;
+    right: 25px;
+    top: 25px;
+    font-size: 1.5em;
+    color: white;
+  }
 }
