--- a/app/views/dna_extractions/_dna_extraction.html.erb
+++ b/app/views/dna_extractions/_dna_extraction.html.erb
@@ -2,27 +2,13 @@
   <div class="card__title horizontal-flex">
     <div class="left flex-grow">
       <%= fa_icon 'tint' %>
-      <%= link_to dna_extraction.description, edit_dna_extraction_path(dna_extraction.id) %>
-    </div>
-  </div>
-
-  <!-- Large modal with the Gel Picture associated to this DNA Extraction -->
-  <div id="gel-modal-<%= dna_extraction.id %>" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Gel Electrophoresis run with DNA #<%= dna_extraction.id %></h4>
-        </div>
-        <div class="modal-body">
-          <%= image_tag(dna_extraction.gel_picture.url) %>
-        </div>
-      </div>
+      <%= link_to dna_extraction.description, dna_extraction_path(dna_extraction.id) %>
     </div>
   </div>
 
   <div class="horizontal-flex">
     <div class="flex-grow">
+
       <!-- Quantification tables -->
       <% unless dna_extraction.nanodrop_quantifications.count.zero? %>
         <table class="table table-bordered table-condensed table-striped quantification">
@@ -44,6 +30,7 @@
     </div>
 
 
+    <!-- Gel picture preview -->
     <% if dna_extraction.gel_picture.file %>
       <div class="flex-grow">
         <a data-toggle="modal" data-target="#gel-modal-<%= dna_extraction.id %>">
@@ -51,6 +38,24 @@
             <%= image_tag dna_extraction.gel_picture.url, class: 'preview' %>
           </div>
         </a>
+      </div>
+
+      <!-- Large modal with the Gel Picture associated to this DNA Extraction -->
+      <div id="gel-modal-<%= dna_extraction.id %>" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="gelPictureModal">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title">Gel Electrophoresis run with DNA #<%= dna_extraction.id %></h4>
+            </div>
+            <div class="modal-body">
+              <p class="img-comment">
+                <%= extract_img_comment(dna_extraction.gel_picture.path) %>
+              </p>
+              <%= image_tag(dna_extraction.gel_picture.url) %>
+            </div>
+          </div>
+        </div>
       </div>
     <% end %>
 
