--- a/app/views/dna_extractions/show.html.erb
+++ b/app/views/dna_extractions/show.html.erb
@@ -1,23 +1,3 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Sample:</strong>
-  <%= @dna_extraction.sample %>
-</p>
-
-<p>
-  <strong>Old:</strong>
-  <%= @dna_extraction.old_id %>
-</p>
-
-<p>
-  <strong>Extraction date:</strong>
-  <%= @dna_extraction.date %>
-</p>
-
-<p>
-  <strong>Notes:</strong>
-  <%= @dna_extraction.notes %>
-</p>
-
-<%= link_to 'Edit', edit_dna_extraction_path(@dna_extraction) %> |
+<%= render @dna_extraction %>
