add button of notebook download

--- a/app/views/notebooks/index.html.erb
+++ b/app/views/notebooks/index.html.erb
@@ -3,6 +3,7 @@
 <table class="table table-condensed table-striped">
   <thead>
     <tr>
+      <th></th>
       <th>Title</th>
       <th>Description</th>
       <th>Date</th>
@@ -13,10 +14,15 @@
   <tbody>
     <% @notebooks.each do |notebook| %>
       <tr>
+        <td>
+          <%= link_to notebook.file.url, title: 'Download zipped' do %>
+            <%= fa_icon 'download' %>
+          <% end %>
+        </td>
         <td><%= link_to notebook.title, notebook %></td>
         <td><%= notebook.description %></td>
         <td><%= notebook.date %></td>
-        <td><%= link_to 'Edit', edit_notebook_path(notebook) %></td>
+        <td><%= link_to 'Edit details', edit_notebook_path(notebook) %></td>
         <td><%= link_to 'Destroy', notebook, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
